--- a/SecondTry/SecondTry.Android/SecondTry.Android.csproj
+++ b/SecondTry/SecondTry.Android/SecondTry.Android.csproj
@@ -92,5 +92,8 @@
       <Name>SecondTry</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\Monday.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
