--- a/SecondTry/SecondTry.Android/SecondTry.Android.csproj
+++ b/SecondTry/SecondTry.Android/SecondTry.Android.csproj
@@ -95,5 +95,8 @@
   <ItemGroup>
     <AndroidAsset Include="Assets\Monday.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\mipmap-xxxhdpi\GSUicon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
