--- a/SecondTry/SecondTry.Android/SecondTry.Android.csproj
+++ b/SecondTry/SecondTry.Android/SecondTry.Android.csproj
@@ -83,9 +83,7 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\drawable\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\SecondTry\SecondTry.csproj">
       <Project>{4B8BC794-7AC8-4263-860A-3D17ACC88BCA}</Project>
@@ -94,6 +92,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\Monday.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\GSUicon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
