--- a/SecondTry/SecondTry.Android/SecondTry.Android.csproj
+++ b/SecondTry/SecondTry.Android/SecondTry.Android.csproj
@@ -94,7 +94,9 @@
     <AndroidAsset Include="Assets\Monday.txt" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\GSUicon.png" />
+    <AndroidResource Include="Resources\drawable\GSUicon.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </AndroidResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
