--- a/SecondTry/SecondTry.Android/SecondTry.Android.csproj
+++ b/SecondTry/SecondTry.Android/SecondTry.Android.csproj
@@ -85,7 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\Plague.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
